GITC-7375: Updated parameters for colormap test, added note about RGBA collection from ASF

--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -800,10 +800,13 @@
     "        collection=environment_information['prefire_collection'],\n",
     "        granule_id=environment_information['prefire_granules'][0],\n",
     "        variables=[environment_information['prefire_variable']],\n",
+    "        height=9000,\n",
+    "        width=18000,\n",
+    "        crs='EPSG:4326',\n",
     "        format='image/png',\n",
     "    )\n",
     "\n",
-    "    colour_map_job_id = harmony_client.submit(colour_map_request)\n",
+    "    colour_map_job_id = str(harmony_client.submit(colour_map_request))\n",
     "    harmony_client.wait_for_processing(colour_map_job_id, show_progress=True)\n",
     "\n",
     "    with TemporaryDirectory() as temp_dir:\n",
@@ -974,7 +977,9 @@
    "source": [
     "### Test OPERA RTC RGBA:\n",
     "\n",
-    "This test will run a request using an OPERA RTC granule, to demonstrate performance with RGBA. Alternatively, MODIS corrected reflectance granules can be used. This collection gets converted to RGBA within the Harmony service chain prior to reaching HyBIG. The output will be saved to a separate rgba directory."
+    "This test will run a request using an OPERA RTC granule, to demonstrate performance with RGBA. Alternatively, MODIS corrected reflectance granules can be used. This collection gets converted to RGBA within the Harmony service chain prior to reaching HyBIG. The output will be saved to a separate rgba directory.\n",
+    "\n",
+    "**Note**: This collection requires you to accept a EULA before you can download granules. Please try downloading a granule manually [here](https://search.uat.earthdata.nasa.gov/search/granules?p=C1259974840-ASF&pg[0][v]=f&pg[0][qt]=2024-09-11T00%3A00%3A00.000Z%2C&pg[0][id]=OPERA_L2_RTC-S1_T063-133291-IW3_20240911T000822Z_20240911T114658Z*&pg[0][gsk]=start_date&g=G1269604594-ASF&q=C1259974840-ASF&lat=21.077285&long=-89.23667086956522&zoom=9.937662345674783) and accepting the click-through agreement. "
    ]
   },
   {
