Fix Version comment in notebook.

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -24,8 +24,8 @@
     "- Subset by shapefile \n",
     "\n",
     "\n",
-    "We test against ICESat2 v6 collections:\n",
-    "[ATL03](https://nsidc.org/data/atl03/versions/6), [ATL04](https://nsidc.org/data/atl04/versions/6), [ATL06](https://nsidc.org/data/atl06/versions/6), [ATL07](https://nsidc.org/data/atl07/versions/6), [ATL08](https://nsidc.org/data/atl08/versions/6), [ATL09](https://nsidc.org/data/atl09/versions/6), [ATL10](https://nsidc.org/data/atl10/versions/6), [ATL12](https://nsidc.org/data/atl12/versions/6), [ATL13](https://nsidc.org/data/atl13/versions/6), and [ATL24](https://nsidc.org/data/atl24/versions/1)\n",
+    "We test against ICESat2 v7 collections:\n",
+    "[ATL03](https://nsidc.org/data/atl03/versions/7), [ATL04](https://nsidc.org/data/atl04/versions/7), [ATL06](https://nsidc.org/data/atl06/versions/7), [ATL07](https://nsidc.org/data/atl07/versions/7), [ATL08](https://nsidc.org/data/atl08/versions/7), [ATL09](https://nsidc.org/data/atl09/versions/7), [ATL10](https://nsidc.org/data/atl10/versions/7), [ATL12](https://nsidc.org/data/atl12/versions/7), [ATL13](https://nsidc.org/data/atl13/versions/7) and ICESat2 V1 [ATL24](https://nsidc.org/data/atl24/versions/1)\n",
     "\n",
     "\n",
     "## Prerequisites\n",
