Updates NSIDC's Icesat-2 tests to use to V7 collections. (#231)

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -24,8 +24,8 @@
     "- Subset by shapefile \n",
     "\n",
     "\n",
-    "We test against ICESat2 v6 collections:\n",
-    "[ATL03](https://nsidc.org/data/atl03/versions/6), [ATL04](https://nsidc.org/data/atl04/versions/6), [ATL06](https://nsidc.org/data/atl06/versions/6), [ATL07](https://nsidc.org/data/atl07/versions/6), [ATL08](https://nsidc.org/data/atl08/versions/6), [ATL09](https://nsidc.org/data/atl09/versions/6), [ATL10](https://nsidc.org/data/atl10/versions/6), [ATL12](https://nsidc.org/data/atl12/versions/6), [ATL13](https://nsidc.org/data/atl13/versions/6), and [ATL24](https://nsidc.org/data/atl24/versions/1)\n",
+    "We test against ICESat2 v7 collections:\n",
+    "[ATL03](https://nsidc.org/data/atl03/versions/7), [ATL04](https://nsidc.org/data/atl04/versions/7), [ATL06](https://nsidc.org/data/atl06/versions/7), [ATL07](https://nsidc.org/data/atl07/versions/7), [ATL08](https://nsidc.org/data/atl08/versions/7), [ATL09](https://nsidc.org/data/atl09/versions/7), [ATL10](https://nsidc.org/data/atl10/versions/7), [ATL12](https://nsidc.org/data/atl12/versions/7), [ATL13](https://nsidc.org/data/atl13/versions/7) and ICESat2 V1 [ATL24](https://nsidc.org/data/atl24/versions/1)\n",
     "\n",
     "\n",
     "## Prerequisites\n",
@@ -148,36 +148,36 @@
     "non_production_configuration = {\n",
     "    'subset_bounding_box': {\n",
     "        'ATL03': {\n",
-    "            'collection_concept_id': Collection(id='C1256407609-NSIDC_CUAT'),\n",
-    "            'granule_id': 'G1262402516-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1271851786-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1274886207-NSIDC_CUAT',\n",
     "            'spatial': BBox(-105.5, 40.0, -105.0, 40.005),\n",
     "        },\n",
     "        'ATL07': {\n",
-    "            'collection_concept_id': Collection(id='C1256535488-NSIDC_CUAT'),\n",
-    "            'granule_id': 'G1261684946-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1273843094-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1276549679-NSIDC_CUAT',\n",
     "            'spatial': BBox(-112.0, 80.0, -93.0, 80.3),\n",
     "        },\n",
     "        # Segments could not be verified since the input segment index begin\n",
     "        # and count data does not appear to accurately represent the photon\n",
     "        # trajectories. This will be investigated in DAS-2332.\n",
     "        'ATL08': {\n",
-    "            'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
-    "            'granule_id': 'G1260745539-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1273843095-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1274886153-NSIDC_CUAT',\n",
     "            'spatial': BBox(-105.5, 40.0, -105.0, 40.25),\n",
     "        },\n",
     "        'ATL10': {\n",
-    "            'collection_concept_id': Collection(id='C1256535487-NSIDC_CUAT'),\n",
-    "            'granule_id': 'G1261681735-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1273843119-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1276549689-NSIDC_CUAT',\n",
     "            'spatial': BBox(w=164, s=-76, e=172, n=-72),\n",
     "        },\n",
     "        'ATL12': {\n",
-    "            'collection_concept_id': Collection(id='C1256476536-NSIDC_CUAT'),\n",
-    "            'granule_id': 'G1263992202-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1273843209-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1276688746-NSIDC_CUAT',\n",
     "            'spatial': BBox(-79.0, 27.0, -77.0, 34.0),\n",
     "        },\n",
     "        'ATL13': {\n",
-    "            'collection_concept_id': Collection(id='C1257810199-NSIDC_CUAT'),\n",
-    "            'granule_id': 'G1261681705-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1273843120-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1274781492-NSIDC_CUAT',\n",
     "            'spatial': BBox(-89.0, 43.0, -75.0, 45.0),\n",
     "        },\n",
     "        'ATL24': {\n",
@@ -188,8 +188,8 @@
     "    },\n",
     "    'subset_by_temporal_range': {\n",
     "        'ATL04': {\n",
-    "            'collection_concept_id': Collection(id='C1256535558-NSIDC_CUAT'),\n",
-    "            'granule_id': 'G1256952662-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1273094439-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1274886098-NSIDC_CUAT',\n",
     "            'temporal': {\n",
     "                'start': datetime.fromisoformat(\"2020-04-08T08:00:00.000Z\"),\n",
     "                'stop': datetime.fromisoformat(\"2020-04-08T08:05:00.000Z\"),\n",
@@ -199,8 +199,8 @@
     "        # and count data does not appear to accurately represent the photon\n",
     "        # trajectories. This will be investigated in DAS-2332.\n",
     "        'ATL08': {\n",
-    "            'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
-    "            'granule_id': 'G1260745539-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1273843095-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1274886153-NSIDC_CUAT',\n",
     "            'temporal': {\n",
     "                'start': datetime.fromisoformat(\"2021-09-25T19:02:00.000Z\"),\n",
     "                'stop': datetime.fromisoformat(\"2021-09-25T19:05:00.000Z\"),\n",
@@ -209,26 +209,26 @@
     "    },\n",
     "    'subset_by_shapefile': {\n",
     "        'ATL06': {\n",
-    "            'collection_concept_id': Collection(id='C1256358217-NSIDC_CUAT'),\n",
-    "            'granule_id': 'G1260779121-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1273842995-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1274886114-NSIDC_CUAT',\n",
     "            'shape': 'ancillary/Iceland_sliver.zip',\n",
     "        },\n",
     "        # Segments could not be verified since the input segment index begin\n",
     "        # and count data does not appear to accurately represent the photon\n",
     "        # trajectories. This will be investigated in DAS-2332.\n",
     "        'ATL08': {\n",
-    "            'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
-    "            'granule_id': 'G1260498664-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1273843095-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1274886152-NSIDC_CUAT',\n",
     "            'shape': 'ancillary/SriLanka_simple.kml',\n",
     "        },\n",
     "        'ATL09': {\n",
-    "            'collection_concept_id': Collection(id='C1256563776-NSIDC_CUAT'),\n",
-    "            'granule_id': 'G1262106425-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1273950116-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1274781828-NSIDC_CUAT',\n",
     "            'shape': 'ancillary/Tasmania_sliver.geojson',\n",
     "        },\n",
     "        'ATL10': {\n",
-    "            'collection_concept_id': Collection(id='C1256535487-NSIDC_CUAT'),\n",
-    "            'granule_id': 'G1261681735-NSIDC_CUAT',\n",
+    "            'collection_concept_id': Collection(id='C1273843119-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1276549689-NSIDC_CUAT',\n",
     "            'shape': 'ancillary/Ross_Sea_positive_lon_only.geojson',\n",
     "        },\n",
     "    },\n",
@@ -245,33 +245,33 @@
     "production_configuration = {\n",
     "    'subset_bounding_box': {\n",
     "        'ATL03': {\n",
-    "            'collection_concept_id': Collection(id='C2596864127-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2632805836-NSIDC_CPRD',\n",
+    "            'collection_concept_id': Collection(id='C3326974349-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G3462328036-NSIDC_CPRD',\n",
     "            'spatial': BBox(-105.5, 40.0, -105.0, 40.005),\n",
     "        },\n",
     "        'ATL07': {\n",
-    "            'collection_concept_id': Collection(id='C2713030505-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2738665484-NSIDC_CPRD',\n",
+    "            'collection_concept_id': Collection(id='C3564876395-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G3712468954-NSIDC_CPRD',\n",
     "            'spatial': BBox(-112.0, 80.0, -93.0, 80.3),\n",
     "        },\n",
     "        'ATL08': {\n",
-    "            'collection_concept_id': Collection(id='C2613553260-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2645102344-NSIDC_CPRD',\n",
+    "            'collection_concept_id': Collection(id='C3565574177-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G3604742314-NSIDC_CPRD',\n",
     "            'spatial': BBox(-105.5, 40.0, -105.0, 40.25),\n",
     "        },\n",
     "        'ATL10': {\n",
-    "            'collection_concept_id': Collection(id='C2613553243-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2738637140-NSIDC_CPRD',\n",
+    "            'collection_concept_id': Collection(id='C3565574246-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G3712394149-NSIDC_CPRD',\n",
     "            'spatial': BBox(w=164, s=-76, e=172, n=-72),\n",
     "        },\n",
     "        'ATL12': {\n",
-    "            'collection_concept_id': Collection(id='C2613553216-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2952685768-NSIDC_CPRD',\n",
+    "            'collection_concept_id': Collection(id='C3566214012-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G3769563398-NSIDC_CPRD',\n",
     "            'spatial': BBox(-79.0, 27.0, -77.0, 34.0),\n",
     "        },\n",
     "        'ATL13': {\n",
-    "            'collection_concept_id': Collection(id='C2684928243-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2720556827-NSIDC_CPRD',\n",
+    "            'collection_concept_id': Collection(id='C3565574351-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G3578392740-NSIDC_CPRD',\n",
     "            'spatial': BBox(-89.0, 43.0, -75.0, 45.0),\n",
     "        },\n",
     "        'ATL24': {\n",
@@ -282,16 +282,16 @@
     "    },\n",
     "    'subset_by_temporal_range': {\n",
     "        'ATL04': {\n",
-    "            'collection_concept_id': Collection(id='C2613553327-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2634053936-NSIDC_CPRD',\n",
+    "            'collection_concept_id': Collection(id='C3420692319-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G3582269392-NSIDC_CPRD',\n",
     "            'temporal': {\n",
     "                'start': datetime.fromisoformat(\"2020-04-08T08:00:00.000Z\"),\n",
     "                'stop': datetime.fromisoformat(\"2020-04-08T08:05:00.000Z\"),\n",
     "            },\n",
     "        },\n",
     "        'ATL08': {\n",
-    "            'collection_concept_id': Collection(id='C2613553260-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2645102344-NSIDC_CPRD',\n",
+    "            'collection_concept_id': Collection(id='C3565574177-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G3604742314-NSIDC_CPRD',\n",
     "            'temporal': {\n",
     "                'start': datetime.fromisoformat(\"2021-09-25T19:02:00.000Z\"),\n",
     "                'stop': datetime.fromisoformat(\"2021-09-25T19:05:00.000Z\"),\n",
@@ -300,23 +300,23 @@
     "    },\n",
     "    'subset_by_shapefile': {\n",
     "        'ATL06': {\n",
-    "            'collection_concept_id': Collection(id='C2670138092-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2674250298-NSIDC_CPRD',\n",
+    "            'collection_concept_id': Collection(id='C3564876127-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G3612056538-NSIDC_CPRD',\n",
     "            'shape': 'ancillary/Iceland_sliver.zip',\n",
     "        },\n",
     "        'ATL08': {\n",
-    "            'collection_concept_id': Collection(id='C2613553260-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2640057431-NSIDC_CPRD',\n",
+    "            'collection_concept_id': Collection(id='C3565574177-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G3609574141-NSIDC_CPRD',\n",
     "            'shape': 'ancillary/SriLanka_simple.kml',\n",
     "        },\n",
     "        'ATL09': {\n",
-    "            'collection_concept_id': Collection(id='C2649212495-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2666419430-NSIDC_CPRD',\n",
+    "            'collection_concept_id': Collection(id='C3578753623-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G3615031005-NSIDC_CPRD',\n",
     "            'shape': 'ancillary/Tasmania_sliver.geojson',\n",
     "        },\n",
     "        'ATL10': {\n",
-    "            'collection_concept_id': Collection(id='C2613553243-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2738637140-NSIDC_CPRD',\n",
+    "            'collection_concept_id': Collection(id='C3565574246-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G3712394149-NSIDC_CPRD',\n",
     "            'shape': 'ancillary/Ross_Sea_positive_lon_only.geojson',\n",
     "        },\n",
     "    },\n",
