--- a/test/giovanni-averaging-service/GiovanniAveragingService_Regression.ipynb
+++ b/test/giovanni-averaging-service/GiovanniAveragingService_Regression.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "The dependencies for this notebook are listed in the [environment.yaml](./environment.yaml). To test or install locally, create the papermill environment used in the automated regression testing suite:\n",
     "\n",
-    "`conda env create -f ./environment.yaml && conda activate papermill-hoss`\n",
+    "`conda env create -f ./environment.yaml && conda activate papermill-giovanni-averaging-service`\n",
     "\n",
     "A `.netrc` file must also be located in the `test` directory of this repository."
    ]
