--- a/test/giovanni-averaging-service/GiovanniAveragingService_Regression.ipynb
+++ b/test/giovanni-averaging-service/GiovanniAveragingService_Regression.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2e0885c7",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b6cfaab9",
    "metadata": {
     "tags": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fb957916",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "edae8b26",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d894b03f",
    "metadata": {},
    "outputs": [],
@@ -153,6 +153,7 @@
     "    variables=[\"GPM_3IMERGHH_07_precipitation\"],\n",
     "    format=\"text/csv\",\n",
     "    average=\"area\",\n",
+    "    labels=[\"giovanni-avg-rtests-area\", \"giovanni-avg-rtests\"],\n",
     ")\n",
     "\n",
     "job_id = harmony_client.submit(request)"
@@ -168,18 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2dd6a69e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/3t/h5wtz4jx5y767tbwyy0jmy_h0000gq/T/tmpoxgxyzwy/8836765_GIOVANNI-areaAvgTimeSeries.GPM_3IMERGHH_07_precipitation.20210829-20210829.110W_25N_78W_35N.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reference_csv = os.path.join(\n",
     "    os.getcwd(),\n",
@@ -213,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1850093e",
    "metadata": {},
    "outputs": [],
@@ -228,6 +221,7 @@
     "    variables=[\"GPM_3IMERGHH_07_precipitation\"],\n",
     "    format=\"image/tiff\",\n",
     "    average=\"time\",\n",
+    "    labels=[\"giovanni-avg-rtests-time\", \"giovanni-avg-rtests\"],\n",
     ")\n",
     "\n",
     "job_id = harmony_client.submit(request)"
@@ -243,18 +237,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "69d05c6f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/3t/h5wtz4jx5y767tbwyy0jmy_h0000gq/T/tmp8riq45l1/8836766_GIOVANNI-timeAvgMap.GPM_3IMERGHH_07_precipitation.20210829-20210829.110W_25N_78W_35N.tif\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reference_tif = os.path.join(\n",
     "    os.getcwd(),\n",
